@@ -2,6 +2,7 @@
 ==========================
 
 - Fix earmark warnings not getting cleared up when disabling the setting
+- Fix right to left text direction for arrow keys (#121)
 
 49.0 - September 12, 2025
 ==========================
